# benchmarking

./: CMakeLists.txt  async_disk_flush_io.cpp  async_disk_io.cpp  async_disk_no_flush_io.cpp  async_disk_o_dsync_flush.cpp  async_disk_o_sync_flush.cpp  c_and_cpp_compare_plot.py  c_and_cpp_tests.sh  client.c  client.cpp  client2.cpp  mmap_disk_io.cpp  plot_results.py  run_tests.sh  server.c  server.cpp  server2.cpp  sync_disk_io.cpp
compare_results/: rdma_send_recv_1.txt  rdma_send_recv_1024.txt  rdma_send_recv_1048576.txt  rdma_send_recv_128.txt  rdma_send_recv_131072.txt  rdma_send_recv_16.txt  rdma_send_recv_16384.txt  rdma_send_recv_2.txt  rdma_send_recv_2048.txt  rdma_send_recv_256.txt  rdma_send_recv_262144.txt  rdma_send_recv_32.txt  rdma_send_recv_32768.txt  rdma_send_recv_4.txt  rdma_send_recv_4096.txt  rdma_send_recv_512.txt  rdma_send_recv_524288.txt  rdma_send_recv_64.txt  rdma_send_recv_65536.txt  rdma_send_recv_8.txt  rdma_send_recv_8192.txt  rdma_send_recv_c_1.txt  rdma_send_recv_c_1024.txt  rdma_send_recv_c_1048576.txt  rdma_send_recv_c_128.txt  rdma_send_recv_c_131072.txt  rdma_send_recv_c_16.txt  rdma_send_recv_c_16384.txt  rdma_send_recv_c_2.txt  rdma_send_recv_c_2048.txt  rdma_send_recv_c_256.txt  rdma_send_recv_c_262144.txt  rdma_send_recv_c_32.txt  rdma_send_recv_c_32768.txt  rdma_send_recv_c_4.txt  rdma_send_recv_c_4096.txt  rdma_send_recv_c_512.txt  rdma_send_recv_c_524288.txt  rdma_send_recv_c_64.txt  rdma_send_recv_c_65536.txt  (+2 more)
results/: async_io_1.txt  async_io_1024.txt  async_io_1048576.txt  async_io_128.txt  async_io_131072.txt  async_io_16.txt  async_io_16384.txt  async_io_2.txt  async_io_2048.txt  async_io_256.txt  async_io_262144.txt  async_io_32.txt  async_io_32768.txt  async_io_4.txt  async_io_4096.txt  async_io_512.txt  async_io_524288.txt  async_io_64.txt  async_io_65536.txt  async_io_8.txt  async_io_8192.txt  async_io_dsync_elapsed_time_1.txt  async_io_dsync_elapsed_time_1024.txt  async_io_dsync_elapsed_time_1048576.txt  async_io_dsync_elapsed_time_128.txt  async_io_dsync_elapsed_time_131072.txt  async_io_dsync_elapsed_time_16.txt  async_io_dsync_elapsed_time_16384.txt  async_io_dsync_elapsed_time_2.txt  async_io_dsync_elapsed_time_2048.txt  async_io_dsync_elapsed_time_256.txt  async_io_dsync_elapsed_time_262144.txt  async_io_dsync_elapsed_time_32.txt  async_io_dsync_elapsed_time_32768.txt  async_io_dsync_elapsed_time_4.txt  async_io_dsync_elapsed_time_4096.txt  async_io_dsync_elapsed_time_512.txt  async_io_dsync_elapsed_time_524288.txt  async_io_dsync_elapsed_time_64.txt  async_io_dsync_elapsed_time_65536.txt  (+87 more)
rlibv2/c_wrappers/: rdmaio_config_c.h  rdmaio_impl_c.h  rdmaio_lib_c.h  rdmaio_mem_c.h  rdmaio_nic_c.h  rdmaio_qpattr_c.h  rdmaio_rc_c.h  rdmaio_rc_recv_manager_c.h  rdmaio_rctrl_c.h  rdmaio_recv_iter_c.h  rdmaio_reg_handler_c.h  rdmaio_regattr_c.h  rdmaio_result_c.h
rlibv2/c_wrappers/impl/: rdmaio_config_c.c  rdmaio_impl_c.c  rdmaio_impl_c.cpp  rdmaio_lib_c.cpp  rdmaio_mem_c.cpp  rdmaio_nic_c.cpp  rdmaio_rc_c.cpp  rdmaio_rc_recv_manager_c.c  rdmaio_rc_recv_manager_c.cpp  rdmaio_rctrl_c.c  rdmaio_rctrl_c.cpp  rdmaio_recv_iter_c.cpp  rdmaio_reg_handler_c.cpp
